# osgTools

./: .clang-format  .envrc  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  flake.nix
cmake/: FindosgTools.cmake
empty_overlay/: flake.nix
src/: CMakeLists.txt  osgToolsConfig.cmake.in
src/include/osgTools/: GraphicsOperations.h  PointShaderProgram.h  StatsHandler.h  Version.h
src/osgTools/: PointShaderProgram.cpp  StatsHandler.cpp
